add devise & pundit & seeds & sign in/up page

--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "sass": "^1.49.9"
   },
   "scripts": {
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/tailwind.css --minify"
   }
 }
