--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
     "esbuild": "^0.14.27",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/tailwind.css -c ./config/tailwind.config.js --minify",
